<resources>
    <string name="app_name">LifeTime</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings Related To Register-->
    <string name="title_activity_register_front">Details About You</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_dob">Date of Birth (D.O.B)</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_interests">Add interests</string>
    <string name="prompt_interest_label">Add Interest Label</string>
    <string name="prompt_next">Next </string>
    <string name="prompt_back">Back</string>
    <string name="prompt_confirm">Confirm</string>
    <string name="prompt_creating">Creating...</string>
    <string name="confirm_ready">Ready To Plan!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
