<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mad.com.lifetime.RegisterFront">
    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <RelativeLayout
            android:id="@+id/register_p1_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RegFrontTitle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="20dp"
                android:gravity="center_horizontal"
                android:fontFamily=""


                android:text="@string/title_activity_register_front"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/FnameLayout"
                android:layout_below="@+id/RegFrontTitle">

                <EditText
                    android:id="@+id/register_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LnameLayout"
                android:layout_below="@id/FnameLayout">

                <EditText

                    android:id="@+id/register_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LnameLayout"
                android:id="@+id/RegEmailLayout">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RegEmailLayout"
                android:id="@+id/RegUsernameLayout">

                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RegUsernameLayout"
                android:id="@+id/RegPasswordLayout">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RegPasswordLayout"
                android:id="@+id/RegConfirmPasswordLayout">

                <EditText
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>





            <Button
                android:id="@+id/register_dob_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_dob"
                android:layout_below="@id/RegConfirmPasswordLayout"
                android:layout_marginTop="16dp"
                style="?android:textAppearanceSmall"
                android:onClick="showDatePickerDialog"
                />
            <Button
                android:id="@+id/sign_in_help_button"
                android:layout_below="@id/register_dob_button"
                android:layout_alignParentRight="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/circle_button_dw"
                android:drawableTop="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_marginTop="30dp"
                android:paddingTop="11dp"
                android:text="@string/prompt_next"
                android:textColor="#fff"
                />
            <ImageButton style="@style/AppTheme"
                android:id="@+id/sign_up_next_button"
                android:layout_below="@id/register_dob_button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:elevation="10dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:background="@color/colorIconVector"
                android:layout_marginTop="30dp"
                android:text="Help"
                android:textColor="#fff"
                />


        </RelativeLayout>

    </ScrollView>


</LinearLayout>
